--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -10,6 +10,16 @@ h2 {
     font-size: 26px;
   }
 }
+
+h3 {
+  font-size: 22px;
+  line-height: 127.27%;
+  @media (max-width: 1024px) {
+    font-size: 20px;
+    line-height: 125%;
+  }
+}
+
 .p1 {
   font-weight: 300;
   font-size: 14px;
