--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -73,7 +73,7 @@ main {
     height: 959px;
   }
   @media (max-width: 500px) {
-    height: 542px;
+    height: 100vh; //542px
   }
   &__swiper {
     width: 100%;
@@ -281,9 +281,6 @@ main {
     }
   }
 
-  &__next-link {
-  }
-
   &__vertical-slogan {
     width: 318px;
     height: auto; //93px
@@ -304,42 +301,6 @@ main {
       -webkit-text-fill-color: unset;
       -webkit-text-stroke: unset;
     }
-  }
-}
-
-.toolbar {
-  display: none;
-  @media (max-width: 500px) {
-    display: block;
-    width: 100%;
-    height: 55px;
-    background: #ffffff;
-  }
-  &__conteiner {
-    width: 100%;
-    height: 100%;
-    padding: 0 8px;
-    margin: 0 auto;
-    // box-sizing: content-box;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__icon-box {
-    width: 44px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // font-family: 'SF Pro Text';
-  }
-
-  &__icon {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 21px;
-    line-height: 105%;
-    color: #2e7cf6;
   }
 }
 
@@ -608,9 +569,20 @@ main {
     position: relative;
     height: 419px;
     margin: 0 auto;
+    padding-bottom: 11px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @media (max-width: 1024px) {
+      height: 373px;
+    }
+    @media (max-width: 678px) {
+      height: 333px;
+    }
+    @media (max-width: 375px) {
+      height: 301px;
+      padding-bottom: 0;
+    }
   }
 
   &__vertical-about-box {
@@ -620,36 +592,54 @@ main {
       rgba(255, 255, 255, 0.04)
     );
     transform: rotate(-90deg) translate(-63.5px, -63.5px);
+    @media (max-width: 600px) {
+      display: none;
+    }
   }
 
   &__title {
     margin: 0 auto 34px;
     color: #828282;
+    @media (max-width: 1024px) {
+      margin-bottom: 24px;
+    }
+    @media (max-width: 375px) {
+      margin: 0 0 24px;
+    }
   }
 
   &__subtitle {
-    width: 450px;
+    max-width: 455px;
     margin: 0 auto;
     font-weight: 300;
     text-align: center;
     color: #828282;
+    @media (max-width: 375px) {
+      text-align: left;
+    }
   }
 
   &__blorred-text {
+    display: none;
     position: absolute;
     bottom: -23px;
     left: 289px;
     font-size: 56px;
     line-height: 68px;
     color: rgba(255, 255, 255, 0.03);
+    @media (min-width: 1025px) {
+      display: block;
+    }
   }
 
   &__midl-box {
     width: 100%;
     display: grid;
-    grid-template: repeat(3, auto) / repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
     gap: 8px;
-    &:last-child {
+    @media (max-width: 678px) {
+      grid-template-columns: repeat(1, 1fr);
     }
   }
 
@@ -658,17 +648,28 @@ main {
     position: relative;
     &:nth-child(3) {
       grid-column: 1/3;
-      width: 100%;
+      @media (max-width: 678px) {
+        grid-column: 1/2;
+        overflow: hidden;
+        width: auto;
+        height: 100%;
+      }
     }
     &:nth-child(5) {
       display: none;
+      @media (max-width: 375px) {
+        display: block;
+      }
     }
   }
 
   &__image {
-    width: 100%;
+    // width: 100%;
+    height: 100%; //new
     img {
       max-width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
@@ -717,15 +718,6 @@ main {
     }
   }
 
-  &__location {
-  }
-
-  &__date {
-  }
-
-  &__area {
-  }
-
   &__name {
     display: flex;
     flex-wrap: wrap;
@@ -754,6 +746,12 @@ main {
     justify-content: center;
     align-items: center;
     background: #ffffff;
+    @media (max-width: 1024px) {
+      padding-bottom: 49px;
+    }
+    @media (max-width: 768px) {
+      padding-bottom: 0;
+    }
     h3 {
       margin-bottom: 24px;
       color: #080808;
@@ -761,31 +759,193 @@ main {
     .third-section__image {
       max-width: 49.46%;
       width: auto;
+      height: auto;
+      @media (min-width: 1024px) {
+        max-width: 37.086%;
+      }
+      @media (min-width: 678px) {
+        max-width: 37.35%;
+      }
+      @media (min-width: 375px) {
+        max-width: 37%;
+      }
     }
   }
 
   &__last-box {
+    width: 100%;
+    height: 724px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    @media (max-width: 1024px) {
+      height: 623px;
+    }
+    @media (max-width: 678px) {
+      height: 571px;
+    }
+    @media (max-width: 375px) {
+      height: 486px;
+    }
+  }
+
+  &__last-box-conteiner {
+    width: 100%; //533px
+    height: min-content;
+    display: grid;
+    grid-template: repeat(2, auto) / 1fr 79.73% 1fr;
+    row-gap: 25px;
+    @media (max-width: 1024px) {
+      grid-template: repeat(2, auto) / 1fr 455px 1fr;
+    }
+    @media (max-width: 600px) {
+      grid-template: repeat(2, auto) / 1fr auto 1fr;
+    }
   }
 
   &__vertical-request-box {
-  }
+    @include vertical-h5(
+      161px,
+      rgba(255, 255, 255, 0.13),
+      rgba(255, 255, 255, 0.04)
+    );
+    transform: rotate(-90deg) translate(-80.5px, -80.5px);
+    grid-row: 1/3;
+    margin-right: -140px;
 
-  &__vertical-request-text {
+    @media (max-width: 600px) {
+      display: none;
+    }
   }
 
   &__excerpt {
+    width: 424px;
+    font-size: 36px;
+    line-height: 141.67%;
+    justify-self: start;
+    z-index: 1;
+    @media (max-width: 1024px) {
+      justify-self: center;
+      font-size: 32px;
+      text-align: center;
+    }
+    @media (max-width: 600px) {
+      width: auto;
+      grid-column: 2;
+      font-size: 26px;
+    }
   }
 
   &__content {
+    width: 339px;
+    grid-column: 2/3;
+    justify-self: end;
+    z-index: 1;
+    .p1 {
+      color: #ffffff;
+      @media (max-width: 1024px) {
+        text-align: center;
+      }
+    }
+    @media (max-width: 1024px) {
+      justify-self: center;
+    }
+    @media (max-width: 600px) {
+      width: auto;
+    }
   }
 
   &__button {
+    @include button(#ffffff, #080808);
+    z-index: 2;
+    margin-top: 41px;
+
+    @media (max-width: 1024px) {
+      height: 42px;
+      margin: 64px auto 0;
+    }
+    @media (max-width: 768px) {
+      margin-top: 48px;
+    }
   }
 
   &__example-project {
-  }
-}
-.button {
-  &__text {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    a {
+      width: 211px;
+      position: absolute;
+      &:nth-child(1) {
+        bottom: 144px;
+        left: 336px;
+        transform: rotate(-5.99deg);
+        transition: all 0.2s ease;
+        &:hover {
+          transform: rotate(0deg) scale(1.2);
+          transition: all 0.2s ease;
+          z-index: 2;
+        }
+      }
+      &:nth-child(2) {
+        bottom: 164px;
+        left: 401.67px;
+        transform: rotate(-5.99deg);
+        transition: all 0.2s ease;
+        &:hover {
+          transform: rotate(0deg) scale(1.2);
+          transition: all 0.2s ease;
+          z-index: 2;
+        }
+      }
+      &:nth-child(3) {
+        bottom: 144px;
+        left: 336px;
+        transform: rotate(-5.99deg);
+      }
+      &:nth-child(4) {
+        bottom: 144px;
+        left: 336px;
+        transform: rotate(-5.99deg);
+      }
+      &:nth-child(5) {
+        bottom: 144px;
+        left: 336px;
+        transform: rotate(-5.99deg);
+      }
+      &:nth-child(6) {
+        bottom: 144px;
+        left: 336px;
+        transform: rotate(-5.99deg);
+      }
+      &:nth-child(7) {
+        bottom: 144px;
+        left: 336px;
+        transform: rotate(-5.99deg);
+      }
+      &:nth-child(8) {
+        bottom: 144px;
+        left: 336px;
+        transform: rotate(-5.99deg);
+      }
+      &:nth-child(9) {
+        bottom: 144px;
+        left: 336px;
+        transform: rotate(-5.99deg);
+      }
+      &:nth-child(10) {
+        bottom: 144px;
+        left: 336px;
+        transform: rotate(-5.99deg);
+        &:hover {
+          transform: rotate(0deg);
+          transition: all 0.5s ease;
+        }
+      }
+    }
+    img {
+      width: 100%;
+    }
   }
 }
