--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -771,181 +771,7 @@ main {
       }
     }
   }
-
-  &__last-box {
-    width: 100%;
-    height: 724px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    @media (max-width: 1024px) {
-      height: 623px;
-    }
-    @media (max-width: 678px) {
-      height: 571px;
-    }
-    @media (max-width: 375px) {
-      height: 486px;
-    }
-  }
-
-  &__last-box-conteiner {
-    width: 100%; //533px
-    height: min-content;
-    display: grid;
-    grid-template: repeat(2, auto) / 1fr 79.73% 1fr;
-    row-gap: 25px;
-    @media (max-width: 1024px) {
-      grid-template: repeat(2, auto) / 1fr 455px 1fr;
-    }
-    @media (max-width: 600px) {
-      grid-template: repeat(2, auto) / 1fr auto 1fr;
-    }
-  }
-
-  &__vertical-request-box {
-    @include vertical-h5(
-      161px,
-      rgba(255, 255, 255, 0.13),
-      rgba(255, 255, 255, 0.04)
-    );
-    transform: rotate(-90deg) translate(-80.5px, -80.5px);
-    grid-row: 1/3;
-    margin-right: -140px;
-
-    @media (max-width: 600px) {
-      display: none;
-    }
-  }
-
-  &__excerpt {
-    width: 424px;
-    font-size: 36px;
-    line-height: 141.67%;
-    justify-self: start;
-    z-index: 1;
-    @media (max-width: 1024px) {
-      justify-self: center;
-      font-size: 32px;
-      text-align: center;
-    }
-    @media (max-width: 600px) {
-      width: auto;
-      grid-column: 2;
-      font-size: 26px;
-    }
-  }
-
-  &__content {
-    width: 339px;
-    grid-column: 2/3;
-    justify-self: end;
-    z-index: 1;
-    .p1 {
-      color: #ffffff;
-      @media (max-width: 1024px) {
-        text-align: center;
-      }
-    }
-    @media (max-width: 1024px) {
-      justify-self: center;
-    }
-    @media (max-width: 600px) {
-      width: auto;
-    }
-  }
-
-  &__button {
-    @include button(#ffffff, #080808);
-    z-index: 2;
-    margin-top: 41px;
-
-    @media (max-width: 1024px) {
-      height: 42px;
-      margin: 64px auto 0;
-    }
-    @media (max-width: 768px) {
-      margin-top: 48px;
-    }
-  }
-
-  &__example-project {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    a {
-      width: 211px;
-      position: absolute;
-      &:nth-child(1) {
-        bottom: 144px;
-        left: 336px;
-        transform: rotate(-5.99deg);
-        transition: all 0.2s ease;
-        &:hover {
-          transform: rotate(0deg) scale(1.2);
-          transition: all 0.2s ease;
-          z-index: 2;
-        }
-      }
-      &:nth-child(2) {
-        bottom: 164px;
-        left: 401.67px;
-        transform: rotate(-5.99deg);
-        transition: all 0.2s ease;
-        &:hover {
-          transform: rotate(0deg) scale(1.2);
-          transition: all 0.2s ease;
-          z-index: 2;
-        }
-      }
-      &:nth-child(3) {
-        bottom: 144px;
-        left: 336px;
-        transform: rotate(-5.99deg);
-      }
-      &:nth-child(4) {
-        bottom: 144px;
-        left: 336px;
-        transform: rotate(-5.99deg);
-      }
-      &:nth-child(5) {
-        bottom: 144px;
-        left: 336px;
-        transform: rotate(-5.99deg);
-      }
-      &:nth-child(6) {
-        bottom: 144px;
-        left: 336px;
-        transform: rotate(-5.99deg);
-      }
-      &:nth-child(7) {
-        bottom: 144px;
-        left: 336px;
-        transform: rotate(-5.99deg);
-      }
-      &:nth-child(8) {
-        bottom: 144px;
-        left: 336px;
-        transform: rotate(-5.99deg);
-      }
-      &:nth-child(9) {
-        bottom: 144px;
-        left: 336px;
-        transform: rotate(-5.99deg);
-      }
-      &:nth-child(10) {
-        bottom: 144px;
-        left: 336px;
-        transform: rotate(-5.99deg);
-        &:hover {
-          transform: rotate(0deg);
-          transition: all 0.5s ease;
-        }
-      }
-    }
-    img {
-      width: 100%;
-    }
-  }
+  @import "example-box";
 }
+
+@import "poop-up";
