--- a/src/scss/poop-up.scss
+++ b/src/scss/poop-up.scss
@@ -1,5 +1,5 @@
 .poopup {
-  display: none; //!!!!
+  //  display: none; //!!!!
   position: fixed;
   width: 100%;
   height: 100%;
@@ -13,11 +13,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 0 1.25%;
   }
 
   &__content {
-    width: 72.64vw;
-    height: 82.7vh;
+    width: 100%;
+    min-width: min-content;
+    height: 100%;
+    // min-height: 86.85vh;
     background: #f2f2f2;
     box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.04);
   }
