--- a/src/scss/pop-up.scss
+++ b/src/scss/pop-up.scss
@@ -1,6 +1,15 @@
 .conteiner {
   width: 100%;
   padding: 44px 8.75%;
+  @media (max-width: 1024px) {
+    padding: 44px 6.44%;
+  }
+  @media (max-width: 768px) {
+    padding: 44px 10.04%;
+  }
+  @media (max-width: 587px) {
+    padding: 40px 6.4%;
+  }
 }
 
 .popup {
@@ -29,6 +38,7 @@
   }
 
   &__body {
+    // width: 100%;
     min-height: 100%;
     display: flex;
     justify-content: center;
@@ -42,6 +52,15 @@
     opacity: 0;
     transition: all 0.8s ease 0s;
     transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+    @media (max-width: 1024px) {
+      padding: 0 0 1.46%;
+    }
+    @media (max-width: 768px) {
+      padding: 46px 0;
+    }
+    @media (max-width: 587px) {
+      padding: 64px 0;
+    }
   }
 
   &__content {
@@ -51,10 +70,24 @@
     padding: 3.89% 8.54%;
     background: #f2f2f2;
     box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.04);
+    @media (max-width: 1024px) {
+      width: 78.91%;
+      padding: 3.125% 4.98%;
+    }
+    @media (max-width: 768px) {
+      width: 72.65625%;
+      padding: 3.125% 5.21%;
+    }
+    @media (max-width: 587px) {
+      width: 87.2%;
+      padding: 0;
+      background: rgba(8, 8, 8, 0.96);
+    }
   }
 
   &__first-box {
     width: 100%;
+    margin: 0 0 6px;
     border: 1px solid rgba(0, 0, 0, 0.04);
     background: #ffffff;
   }
@@ -64,6 +97,9 @@
       width: max-content;
       margin: 0 auto 38px;
     }
+    @media (max-width: 587px) {
+      margin: -16px auto 38px;
+    }
   }
 
   &__personal-data {
@@ -72,6 +108,9 @@
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 1fr;
     gap: 38px 4.5%;
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
     label {
       height: 23px;
       padding-bottom: 11px;
@@ -87,29 +126,48 @@
   }
 
   &__name {
+    &._error {
+      border-bottom: solid 1px red;
+    }
   }
 
   &__last-name {
   }
 
   &__phone {
+    &._error {
+      border-bottom: solid 1px red;
+    }
   }
 
   &__city {
+    &._error {
+      border-bottom: solid 1px red;
+    }
   }
 
   &__email {
+    &._error {
+      border-bottom: solid 1px red;
+    }
   }
 
   &__select-type {
+    &._error {
+      border-bottom: solid 1px red;
+    }
   }
 
   &__select-option {
+    font-size: 11px;
   }
 
   &__user-comment {
     grid-column: 1/3;
     display: grid;
+    @media (max-width: 768px) {
+      grid-column: 1/2;
+    }
     textarea {
       height: 12px;
     }
@@ -132,6 +190,27 @@
     margin: 0 0 21px 0;
     display: grid;
     grid-template: auto/ repeat(7, 1fr) auto;
+    @media (max-width: 768px) {
+      grid-template: repeat(2, auto) / repeat(3, 1fr) 17px;
+      row-gap: 30px;
+    }
+  }
+
+  &__label {
+    width: auto;
+    height: 20px;
+    grid-column: 1/3;
+    justify-self: start;
+    align-self: center;
+    p {
+      //margin: 0 0 0 -50%;
+      left: calc(-50% + 6.5px);
+      position: relative;
+
+      @media (max-width: 1024px) {
+        font-size: 9px;
+      }
+    }
   }
 
   &__option-item {
@@ -147,18 +226,24 @@
         position: static;
       }
     }
-  }
 
-  &__label {
-    width: auto;
-    height: 20px;
-    grid-column: 1/3;
-    justify-self: start;
-    align-self: center;
-    p {
-      //margin: 0 0 0 -50%;
-      left: calc(-50% + 6.5px);
-      position: relative;
+    &:nth-child(4) .popup__line {
+      @media (max-width: 768px) {
+        display: none;
+      }
+    }
+    &:nth-child(4) .popup__label {
+      @media (max-width: 768px) {
+        margin-left: -10px;
+        width: 48px;
+      }
+    }
+    &:nth-child(5) .popup__label {
+      p {
+        @media (max-width: 768px) {
+          position: static;
+        }
+      }
     }
   }
 
@@ -195,16 +280,29 @@
   &__group-photo {
     width: 100%;
     display: grid;
-    grid-template: repeat(2, auto) / auto 1fr; //repeat(2, auto)
+    grid-template: repeat(2, auto) / auto 1fr;
     row-gap: 10px;
+    @media (max-width: 768px) {
+      grid-template: repeat(3, auto) / 1fr;
+    }
   }
+
   &__add-photo {
-    // max-height: 20px;
     display: flex;
     grid-column: 1/3;
+    &._error {
+      width: 50%;
+      border-bottom: solid 1px red;
+      @media (max-width: 768px) {
+        width: 100%;
+      }
+    }
     input {
       width: 0;
       opacity: 0;
+    }
+    @media (max-width: 768px) {
+      grid-column: 1/2;
     }
   }
 
@@ -225,6 +323,10 @@
     display: flex;
     align-items: center;
     label {
+      cursor: pointer;
+    }
+    @media (max-width: 768px) {
+      justify-self: center;
     }
   }
 
@@ -282,11 +384,15 @@
   }
 
   &__buttom {
-    justify-self: end;
+    margin-top: 5px;
+    justify-self: right;
     text-align: center;
     justify-content: center;
     letter-spacing: 0.06em;
     @include button(#3a3e4b, #ffffff, 0);
+    @media (max-width: 768px) {
+      justify-self: center;
+    }
   }
 
   &__text {
@@ -299,6 +405,10 @@
     text-align: center;
     letter-spacing: 0.06em;
     color: #afb0b2;
+
+    @media (max-width: 1024px) {
+      display: none;
+    }
   }
 
   &__criss-cross {
@@ -306,5 +416,9 @@
     right: 40px;
     position: absolute;
     color: #ffffff;
+    @media (max-width: 587px) {
+      top: 24px;
+      right: 24px;
+    }
   }
 }
