--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -19,6 +19,16 @@ h3 {
     line-height: 125%;
   }
 }
+h4 {
+  font-size: 16px;
+  line-height: 137.5%;
+}
+h6 {
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 17.7px;
+  letter-spacing: 0.06em;
+}
 
 .p1 {
   font-weight: 300;
