--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,7 @@ body {
 @import "preloader";
 
 .wrapper {
+  position: relative;
   max-width: 1440px;
   min-height: 100%;
   margin: 0 auto;
@@ -765,7 +766,7 @@ main {
       @media (max-width: 1024px) {
         max-width: 37.086%;
       }
-      @media (max-width: 678px) {
+      @media (max-width: 768px) {
         max-width: 37.35%;
       }
       @media (max-width: 375px) {
@@ -775,6 +776,9 @@ main {
   }
   @import "example-box";
 }
+@import "contacts";
+
+@include footer;
 
 @import "pop-up";
 @import "pop-up2";
