--- a/src/scss/preloader.scss
+++ b/src/scss/preloader.scss
@@ -4,9 +4,13 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: #e91e1e;
+  background: #080808;
   z-index: 1001;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+  transition: 0.3s opacity;
   //  display: none;
 
   &.loaded_hiding {
@@ -19,8 +23,6 @@
   }
 
   &__content {
-    width: 137px;
-    height: 23px;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 300;
@@ -28,9 +30,9 @@
     line-height: 120.83%;
     color: #fafafa;
     letter-spacing: 0.26em;
+    text-transform: uppercase;
 
     @media (max-width: 1024px) {
-      width: 106px;
       letter-spacing: normal;
     }
   }
