--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -575,7 +575,7 @@ main {
     @media (max-width: 1024px) {
       height: 373px;
     }
-    @media (max-width: 678px) {
+    @media (max-width: 768px) {
       height: 333px;
     }
     @media (max-width: 375px) {
@@ -591,9 +591,6 @@ main {
       rgba(255, 255, 255, 0.04)
     );
     transform: rotate(-90deg) translate(-63.5px, -63.5px);
-    @media (max-width: 600px) {
-      display: none;
-    }
   }
 
   &__title {
@@ -637,7 +634,7 @@ main {
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 1fr;
     gap: 8px;
-    @media (max-width: 678px) {
+    @media (max-width: 768px) {
       grid-template-columns: repeat(1, 1fr);
     }
   }
@@ -647,7 +644,7 @@ main {
     position: relative;
     &:nth-child(3) {
       grid-column: 1/3;
-      @media (max-width: 678px) {
+      @media (max-width: 768px) {
         grid-column: 1/2;
         overflow: hidden;
         width: auto;
@@ -694,6 +691,9 @@ main {
         );
       }
     }
+    @media (max-width: 450px) {
+      padding: 24px;
+    }
   }
 
   &__data {
@@ -725,8 +725,9 @@ main {
     & > * {
       margin-right: 53px;
       margin-top: 12px;
-      @media (max-width: 375px) {
+      @media (max-width: 450px) {
         margin-top: 4px;
+        margin-right: 4px;
       }
     }
   }
@@ -771,6 +772,92 @@ main {
     }
   }
   @import "example-box";
+}
+//-----page404------
+
+.wraper-404 {
+  height: 100%;
+}
+.page-404 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+
+  &__background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      object-fit: cover;
+    }
+    div {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background: rgba(0, 0, 0, 0.95);
+    }
+  }
+
+  &__conteiner {
+    @include container;
+    height: auto;
+    width: 100%;
+    position: relative;
+    display: flex;
+    // align-items: center;
+  }
+
+  &__vertical-box {
+    flex: 1 1 15.56%;
+    @media (max-width: 1024px) {
+      flex: 1 1 17.12%;
+    }
+    @media (max-width: 768px) {
+      flex: 1 1 22.77%;
+    }
+    @media (max-width: 600px) {
+      display: none;
+    }
+  }
+
+  &__vertical-heading {
+    @include vertical-h5(92px);
+    transform: rotate(-90deg) translate(-46px, -46px);
+  }
+
+  &__content {
+    flex: 1 1 83.6%;
+    @media (max-width: 1024px) {
+      flex: 1 1 82.69%;
+    }
+    @media (max-width: 768px) {
+      flex: 1 1 77.23%;
+    }
+  }
+
+  &__title {
+    color: #fafafa;
+  }
+
+  &__subtitle {
+    margin: 24px 0 48px;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 24px;
+    color: #ffffff;
+    opacity: 0.7;
+  }
+  &__discover-more {
+    @include discover-more;
+    letter-spacing: 0.12em;
+  }
 }
 
 @import "email_section";
