--- a/src/scss/often.scss
+++ b/src/scss/often.scss
@@ -409,7 +409,7 @@
 }
 
 @mixin header-black {
-  .header {
+  .header.black {
     background: rgba(229, 229, 229, 0.75);
     &__logo {
       color: #000000;
@@ -425,12 +425,6 @@
       &__button {
         border: 1px solid #080808;
       }
-      // &__list {
-      //   color: #000000;
-      // }
-      // &__heading {
-      //   color: #000000;
-      // }
     }
   }
 }
