end page "news"

--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -51,89 +51,7 @@
   &__title {
     color: #080808;
   }
-
-  &__tabs {
-    @media (max-width: 600px) {
-      position: relative;
-      width: 128px;
-      height: 29px;
-      border: 1.4px solid #c4c4c4;
-      border-radius: 14.5px;
-      //overflow: hidden;!!!!!!!!!!!!!!!!!!
-      display: flex;
-      flex-direction: column;
-      //justify-content: space-between;
-      //flex-direction: column-reverse;
-    }
-    ul {
-      display: flex;
-      gap: 32px;
-      font-weight: 600;
-      font-size: 11px;
-      line-height: 13px;
-      letter-spacing: 0.06em;
-      color: #828282;
-      @media (max-width: 600px) {
-        box-sizing: content-box;
-
-        position: absolute;
-        //  left: 13px;
-        top: 30px; //7px
-        width: auto;
-
-        border: 1.4px solid #c4c4c4;
-        border-radius: 14.5px;
-        //  border: 1.4px solid rgb(196, 196, 196);
-        //  display: flex; //none
-        flex-direction: column;
-        gap: 5px;
-        &.active-choice {
-          border: 1px solid rgb(58, 62, 75, 0.8);
-          border-radius: 14.5px;
-        }
-      }
-    }
-    li {
-      cursor: pointer;
-      display: block;
-      &:hover {
-        border-bottom: 1px solid rgb(58, 62, 75, 0.8);
-      }
-      &.active-tab {
-        color: #080808;
-        border-bottom: 1px solid rgb(58, 62, 75, 0.8);
-        @media (max-width: 600px) {
-          border-bottom: none;
-        }
-      }
-      @media (max-width: 600px) {
-        position: relative;
-        //  display: none;
-        //  &:first-child {
-        //    display: block;
-        //  }
-        &.active-choice {
-          display: block;
-        }
-      }
-    }
-  }
-  &__opening-box {
-    display: none;
-    @media (max-width: 600px) {
-      display: block;
-      //position: absolute;
-      width: 128px;
-      height: 29px;
-      right: 13px;
-      top: 10px;
-      display: flex;
-      justify-content: space-between;
-      color: #080808;
-      font-size: 6px;
-      font-weight: 900;
-    }
-  }
+  @import "tabs-anddropdown-list";
 }
 .second-news-section {
   @include container;
