--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -660,8 +660,7 @@ main {
   }
 
   &__image {
-    // width: 100%;
-    height: 100%; //new
+    height: 100%;
     img {
       max-width: 100%;
       height: 100%;
@@ -680,8 +679,9 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    @media (min-width: 1022px) {
+    @media (min-width: 1025px) {
       opacity: 0;
+      transition: all 0.8s ease;
       &:hover {
         opacity: 1;
         background: linear-gradient(
@@ -689,6 +689,7 @@ main {
           rgba(0, 0, 0, 0.24),
           rgba(0, 0, 0, 0.24)
         );
+        transition: all 0.8s ease;
       }
     }
     @media (max-width: 450px) {
@@ -861,6 +862,7 @@ main {
 }
 
 @import "news";
+@import "projects";
 @import "email_section";
 
 @import "contacts";
