--- a/src/scss/fonts/icons.scss
+++ b/src/scss/fonts/icons.scss
@@ -16,7 +16,7 @@
 .icon-slogan:before {
   content: "\e90c";
 }
-.icon-Group:before {
+.icon-group:before {
   content: "\e905";
 }
 .icon-left-arrowhead:before {
