--- a/src/scss/example-box.scss
+++ b/src/scss/example-box.scss
@@ -16,7 +16,7 @@
   }
 
   &__conteiner {
-    width: 100%; //533px
+    width: 100%;
     height: min-content;
     display: grid;
     grid-template: repeat(2, auto) / 1fr 79.73% 1fr;
@@ -59,6 +59,7 @@
       width: auto;
       grid-column: 2;
       font-size: 26px;
+      text-align: start;
     }
   }
 
@@ -71,6 +72,9 @@
       color: #ffffff;
       @media (max-width: 1024px) {
         text-align: center;
+      }
+      @media (max-width: 600px) {
+        text-align: start;
       }
     }
     @media (max-width: 1024px) {
