--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -862,7 +862,9 @@ main {
 }
 
 @import "news";
+@import "one-news";
 @import "projects";
+@import "one-project";
 @import "email_section";
 
 @import "contacts";
