--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -9,5 +9,19 @@
   @media screen and (max-width: 375px) {
     --pdng-conteiner: 24px;
   }
+  //--------------width-smaller-container
+  --width-smaller-container: 1044px;
+  @media screen and (max-width: 1440px) {
+    --width-smaller-container: 72.64%;
+  }
+  @media screen and (max-width: 1024px) {
+    --width-smaller-container: 68.95%;
+  }
+  @media screen and (max-width: 768px) {
+    --width-smaller-container: 67.71%;
+  }
+  @media screen and (max-width: 600px) {
+    --width-smaller-container: 100%;
+  }
   --pdng-text-conteiner: 120px;
 }
