--- a/src/scss/one-project.scss
+++ b/src/scss/one-project.scss
@@ -98,7 +98,7 @@
     div {
       width: 24px;
       height: 24px;
-      margin: 0 8px 0;
+      margin: 0 8px 0 0;
       border: 1px solid rgba(255, 255, 255, 0.32);
       border-radius: 50%;
       display: flex;
