--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -93,7 +93,7 @@
         grid-column: 1/2;
         overflow: hidden;
         width: auto;
-        height: 100%;
+        height: 87.5vw;
       }
     }
   }
