--- a/src/scss/contacts-page.scss
+++ b/src/scss/contacts-page.scss
@@ -1,9 +1,13 @@
 .page-contacts {
   .contacts {
     height: 100vh;
+    min-height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @media (max-width: 600px) {
+      min-height: 846px;
+    }
     &__conteiner {
       max-width: 1440px;
       width: 100%;
